# bencode-rs

./: .pre-commit-config.yaml  Cargo.toml  leak.py  pyproject.toml  readme.md  requirements.txt  rust-toolchain.toml  rustfmt.toml
.github/: mergify.yml  renovate.json
.github/build-pgo-wheel/: action.yaml
.github/workflows/: _build_wheels.yaml  autofix.yaml  build.yaml  ci.yaml  release.yaml  tests.yaml
bencode2/: __init__.py
bencode_rs/: __init__.py  __init__.pyi
py/bencode_rs/: __init__.py  __init__.pyi
src/: decode.rs  encode.rs  lib.rs
tests/: bench.py  test_1_encode.py  test_2_decode.py  test_decode_strings.py
