[package]
name = "bencode"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bencode"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.11.0"
num = "0.4.3"
pyo3 = { version = "0.27.2", features = ['abi3-py310'] }
smallvec = "1.15.1"
