[package]
name = "bencode"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bencode"
crate-type = ["cdylib"]

[features]
# Default to an `abi3` wheel targeting CPython 3.11+.
# For CPython 3.10 support, build with `--no-default-features`.
default = ["abi3"]
abi3 = ["pyo3/abi3-py311"]

[dependencies]
bytes = "1.11.1"
num = "0.4.3"
pyo3 = { version = "0.28.0" }
smallvec = "1.15.1"
