[package]
name = "bencode"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bencode"
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
bytes = "1.11.1"
num = "0.4.3"
pyo3 = { version = "0.28.2", features = ['generate-import-lib'] }
smallvec = "1.15.1"
