[build-system]
requires = ["maturin==1.11.3"]
build-backend = "maturin"

[project]
name = "bencode-rs"
version = "0.0.7"
requires-python = "~=3.10"
description = "a bencode parser build with pyo3"
readme = "readme.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = [
    "bittorrent",
    "bencode",
    "p2p",
]

[project.urls]
Homepage = 'https://github.com/trim21/bencode-rs'

[dependency-groups]
dev = [
    "abi3audit>=0.0.25,<1.0",
    "black>=24.10,<25.0",
    "maturin>=1.11.3,<2.0",
    "pre-commit>=3.8,<4.0",
    "pytest>=8.3,<9.0",
    "pytest-codspeed==4.2.0",
    "pytest-github-actions-annotate-failures==0.3.0",
    "twine>=5.1,<6.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bencode_rs._bencode"
python-source = "py"

[tool.uv]
package = false
